2009-09-21	Thomas Doerfler <Thomas.Doerfler@embedded-brains.de>

	* startup/bspstarthooks.c, misc/dma-copy.c, misc/timer.c: Add
	missing files.

2009-09-17	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* startup/bspstarthooks.c, misc/dma-copy.c, misc/timer.c: New files.
	* Makefile.am, configure.ac, i2c/i2c.c, include/bsp.h, include/dma.h,
	include/i2c.h, include/io.h, include/irq.h, include/lpc24xx.h,
	include/ssp.h, include/system-clocks.h, irq/irq.c, misc/bspidle.c,
	misc/dma.c, misc/io.c, misc/system-clocks.c, network/network.c,
	ssp/ssp.c, startup/bspstart.c: Changes throughout.

2009-09-15	Ralf Corsépius <ralf.corsepius@rtems.org>

	* configure.ac: Remove RTEMS_BSP_BOOTCARD_OPTIONS.

 2009-08-27	Joel Sherrill <joel.sherrill@OARcorp.com>

	* misc/bspidle.c: Include bsp.h and fix prototype.

2009-08-26	Joel Sherrill <joel.sherrill@oarcorp.com>

	* Makefile.am, preinstall.am, include/bsp.h: Rename BSP specific idle
	thread to bsp_idle_thread.
	* misc/bspidle.c: New file.
	* include/idle.h, misc/idle.c: Removed.

2009-08-06	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* startup/linkcmds, startup/linkcmds.lpc2478,
	startup/linkcmds.lpc2478_ncs, startup/linkcmds.lpc2478_ncs_ram:
	Fixed dummy entries.

2009-07-16	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* startup/linkcmds, startup/linkcmds.lpc2478,
	startup/linkcmds.lpc2478_ncs, startup/linkcmds.lpc2478_ncs_ram:
	Dummy entries for toolchain compatibility.

2009-07-16	Joel Sherrill <joel.sherrill@oarcorp.com>

	* configure.ac: Rename BSP_BOOTCARD_OPTIONS to
	RTEMS_BSP_BOOTCARD_OPTIONS. Add RTEMS_BSP_CLEANUP_OPTIONS so all BSPs
	have the same options.

2009-07-15	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* i2c/i2c.c, include/i2c.h, include/idle.h, include/io.h, misc/idle.c,
	misc/io.c: New files.
	* Makefile.am, README, configure.ac, preinstall.am,
	clock/clock-config.c, console/console-config.c, include/irq.h,