@@ -1,34 +1,3 @@
-/**
- * @file
- *
- * LPC2478 (QVGA Base Board from Embedded Artists).
- */
-
-/*
- * WARNING: This is likely not what you want.  You need Binutils with the
- * REGION_ALIAS feature and the version in the comment below.  This is only to
- * provide linkable tests.
- */
-
-MEMORY {
-	REGION_START (AIW) : ORIGIN = 0x100000, LENGTH = 0x100000
-	REGION_VECTOR (AIW) : ORIGIN = 0x200000, LENGTH = 0x100000
-	REGION_TEXT (AIW) : ORIGIN = 0x300000, LENGTH = 0x100000
-	REGION_TEXT_LOAD (AIW) : ORIGIN = 0x400000, LENGTH = 0x100000
-	REGION_RODATA (AIW) : ORIGIN = 0x500000, LENGTH = 0x100000
-	REGION_RODATA_LOAD (AIW) : ORIGIN = 0x600000, LENGTH = 0x100000
-	REGION_DATA (AIW) : ORIGIN = 0x700000, LENGTH = 0x100000
-	REGION_DATA_LOAD (AIW) : ORIGIN = 0x800000, LENGTH = 0x100000
-	REGION_FAST (AIW) : ORIGIN = 0x900000, LENGTH = 0x100000
-	REGION_FAST_LOAD (AIW) : ORIGIN = 0xa00000, LENGTH = 0x100000
-	REGION_BSS (AIW) : ORIGIN = 0xb00000, LENGTH = 0x100000
-	REGION_WORK (AIW) : ORIGIN = 0xc00000, LENGTH = 0x100000
-	REGION_STACK (AIW) : ORIGIN = 0xd00000, LENGTH = 0x100000
-        NIRVANA : ORIGIN = 0, LENGTH = 0
-}
-
-/*
-
 MEMORY {
         RAM_INT (AIW) : ORIGIN = 0x40000000, LENGTH = 64k
         RAM_EXT (AIW) : ORIGIN = 0xa0000000, LENGTH = 32M
@@ -44,11 +13,9 @@ REGION_ALIAS ("REGION_RODATA_LOAD", RAM_EXT);
 REGION_ALIAS ("REGION_DATA", RAM_EXT);
 REGION_ALIAS ("REGION_DATA_LOAD", RAM_EXT);
 REGION_ALIAS ("REGION_FAST", RAM_INT);
-REGION_ALIAS ("REGION_FAST_LOAD", RAM_INT);
+REGION_ALIAS ("REGION_FAST_LOAD", RAM_EXT);
 REGION_ALIAS ("REGION_BSS", RAM_EXT);
 REGION_ALIAS ("REGION_WORK", RAM_EXT);
 REGION_ALIAS ("REGION_STACK", RAM_INT);
-
-*/
 
 INCLUDE linkcmds.base
