@@ -1,0 +1,60 @@
+/**
+ * @file
+ *
+ * @ingroup lpc24xx_linker_ncs_rom_int
+ *
+ * @brief Memory map.
+ */
+
+/**
+ * @defgroup lpc24xx_linker_ncs_rom_int NCS Bootloader (LPC2478) Memory Map
+ *
+ * @ingroup bsp_linker
+ *
+ * @brief NCS bootloader (LPC2478) memory map.
+ *
+ * <table>
+ *   <tr><th>Region Name</th><th>Region Begin</th><th>Region Size</th></tr>
+ *   <tr><td>RAM_VEC</td><td>0x40000000</td><td>32k</td></tr>
+ *   <tr><td>RAM_INT</td><td>0x40008000</td><td>32k</td></tr>
+ *   <tr><td>RAM_EXT</td><td>0xa0400000</td><td>4M</td></tr>
+ *   <tr><td>ROM_INT</td><td>0x00000000</td><td>512k - 8k</td></tr>
+ * </table>
+ *
+ * <table>
+ *   <tr><th>Section Name</th><th>Section Runtime Region</th><th>Section Load Region</th></tr>
+ *   <tr><td>.start</td><td>ROM_INT</td><td>ROM_INT</td></tr>
+ *   <tr><td>.vector</td><td>RAM_VEC</td><td></td></tr>
+ *   <tr><td>.text</td><td>ROM_INT</td><td>ROM_INT</td></tr>
+ *   <tr><td>.rodata</td><td>ROM_INT</td><td>ROM_INT</td></tr>
+ *   <tr><td>.data</td><td>RAM_EXT</td><td>ROM_INT</td></tr>
+ *   <tr><td>.fast</td><td>RAM_INT</td><td>ROM_INT</td></tr>
+ *   <tr><td>.bss</td><td>RAM_EXT</td><td></td></tr>
+ *   <tr><td>.work</td><td>RAM_EXT</td><td></td></tr>
+ *   <tr><td>.stack</td><td>RAM_INT</td><td></td></tr>
+ */
+
+
+MEMORY {
+        RAM_VEC (AIW) : ORIGIN = 0x40000000, LENGTH = 32k
+        RAM_INT (AIW) : ORIGIN = 0x40008000, LENGTH = 32k
+        RAM_EXT (AIW) : ORIGIN = 0xa0400000, LENGTH = 4M
+        ROM_INT (RX)  : ORIGIN = 0x00000000, LENGTH = 512k - 8k
+        NIRVANA : ORIGIN = 0, LENGTH = 0
+}
+
+REGION_ALIAS ("REGION_START", ROM_INT);
+REGION_ALIAS ("REGION_VECTOR", RAM_VEC);
+REGION_ALIAS ("REGION_TEXT", ROM_INT);
+REGION_ALIAS ("REGION_TEXT_LOAD", ROM_INT);
+REGION_ALIAS ("REGION_RODATA", ROM_INT);
+REGION_ALIAS ("REGION_RODATA_LOAD", ROM_INT);
+REGION_ALIAS ("REGION_DATA", RAM_EXT);
+REGION_ALIAS ("REGION_DATA_LOAD", ROM_INT);
+REGION_ALIAS ("REGION_FAST", RAM_INT);
+REGION_ALIAS ("REGION_FAST_LOAD", ROM_INT);
+REGION_ALIAS ("REGION_BSS", RAM_EXT);
+REGION_ALIAS ("REGION_WORK", RAM_EXT);
+REGION_ALIAS ("REGION_STACK", RAM_INT);
+
+INCLUDE linkcmds.base
